--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+  "name": "public",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "*",
-    "socket.io": "*"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "socket.io-client": "^2.1.0",
+    "youtube-node": "^1.3.2",
+    "youtube-player": "^5.5.0"
   },
-  "author": "",
-  "license": "ISC"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
